Bugfix: buttons were 4px too wide

--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -74,6 +74,11 @@ a.button {
   font-size: 1rem;
 }
 
+.square-button-light {
+  width: 26px;
+  height: 26px;
+}
+
 // Textarea styles
 textarea {
   font-size: 1rem;
